Minor spacing fixes for IE

--- a/src/css/header.styl
+++ b/src/css/header.styl
@@ -253,7 +253,7 @@
 		}
 
 		.mobileMenuToggle {
-			absolute: right 20px top -5px;
+			absolute: right 0 top -5px;
 			cursor: pointer;
 			font-size: 24px;
 			transition: transform .2s, color .2s;
