--- a/src/css/partials.styl
+++ b/src/css/partials.styl
@@ -8,7 +8,7 @@
 		width:90%;
 		max-width:$maxWidth;
 		margin:0 auto;
-		padding:2rem;
+		padding: 2rem 2rem 2.8rem 2rem;
 
 		link($dojoOrange);
 
@@ -18,6 +18,17 @@
 
 		.info {
 			text-align: right;
+		}
+
+		@media (max-width: 750px) {
+			.copyright,
+			.info {
+				text-align: center;
+			}
+
+			.info {
+				margin: 15px 0 20px;
+			}
 		}
 	}
 }
